dragon: move most device-specific files to vendor
It's really nonsense to keep these files in system/
in Pie as we do have a vendor partition. This should
have been done in earlier versions.

This commit moves everything that can be moved without
any extra configuration, and there are some exemptions:

1. rmi4update lies in external/rmi4utils. That is out of
our control and cannot be moved. Luckily it is not essential.

2. Path to enctune.conf is hardcoded in libnvomx.so. Will
`sed` later.

3. Path to bt_vendor.conf can be changed by introducing a
config file. Will do that later.

Change-Id: Ic950484cdaddb94265555c0c3744b2ceaefd5b38

--- a/init.dragon.rc
+++ b/init.dragon.rc
@@ -1,4 +1,4 @@
-import init.dragon.usb.rc
+import /vendor/etc/init/hw/init.dragon.usb.rc
 
 on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug mode=755
@@ -46,7 +46,7 @@ service watchdogd /sbin/watchdogd 10 20
 
 on post-fs
     # Turn on swap
-    swapon_all /fstab.dragon
+    swapon_all /vendor/etc/fstab.dragon
 
     # Swap in only 1 page at a time
     write /proc/sys/vm/page-cluster 0
@@ -94,13 +94,13 @@ on post-fs-data
 
 on property:ro.persistent_properties.ready=true
     # initialize region info
-    exec -- /system/bin/init_regions.sh
+    exec -- /vendor/bin/init_regions.sh
 
 on property:persist.sys.wifi.country_code=*
     # If Magisk is installed, it can alternate boot process
     # so the code here may be different from the one when
     # ro.persistent_properties.ready=true.
-    exec -- /system/bin/init_regions.sh
+    exec -- /vendor/bin/init_regions.sh
 
 on boot
     # power down interface
@@ -202,14 +202,14 @@ on fs
     # Enable verity notification
     write /sys/module/dm_verity/parameters/error_behavior notify
 
-    mount_all /fstab.dragon
+    mount_all /vendor/etc/fstab.dragon
 
 # run the touch firmware update script as soon as non-tmpfs /data is ready
 on property:vold.decrypt=trigger_restart_framework
-    exec -- /system/bin/touchfwup.sh
+    exec -- /vendor/bin/touchfwup.sh
 
 # tune thermal governor
-service tune_therm_gov /system/bin/tune-thermal-gov.sh skin-therm pd_thermal_gov \
+service tune_therm_gov /vendor/bin/tune-thermal-gov.sh skin-therm pd_thermal_gov \
     max_err_temp 5000
     class main
     oneshot
@@ -241,7 +241,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     disabled
     oneshot
 
-service fwtool /system/bin/fwtool mark_boot success
+service fwtool /vendor/bin/fwtool mark_boot success
     class late_start
     user root
     oneshot
@@ -269,4 +269,4 @@ service tlk_daemon /vendor/bin/tlk_daemon --storagedir /data/ss --rpmbdev /dev/b
     group system
 
 on property:debug.bq25892=dump
-    exec - root root system -- /system/bin/dump_bq25892.sh
+    exec - root root system -- /vendor/bin/dump_bq25892.sh
